# scran_norm

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  center__size__factors_8hpp.html  center__size__factors_8hpp__dep__incl.map  center__size__factors_8hpp__dep__incl.md5  center__size__factors_8hpp__incl.map  center__size__factors_8hpp__incl.md5  center__size__factors_8hpp_source.html  choose__pseudo__count_8hpp.html  choose__pseudo__count_8hpp__dep__incl.map  choose__pseudo__count_8hpp__dep__incl.md5  choose__pseudo__count_8hpp__incl.map  choose__pseudo__count_8hpp__incl.md5  choose__pseudo__count_8hpp_source.html  classes.html  dir_bdabb9492db2368b3caf0f4c1df6a160.html  dir_f2cc7361ac0d13c73883f165dcbed0a6.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  log__normalize__counts_8hpp_source.html  namespacelog__normalize__counts_1_1hpp.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacenormalize__counts_1_1hpp.html  namespaces.html  namespacescran.html  namespacescran_1_1center__size__factors.html  namespacescran_1_1choose__pseudo__count.html  namespacescran_1_1sanitize__size__factors.html  namespacescran__norm.html  normalize__counts_8hpp.html  normalize__counts_8hpp__dep__incl.map  normalize__counts_8hpp__dep__incl.md5  normalize__counts_8hpp__incl.map  normalize__counts_8hpp__incl.md5  normalize__counts_8hpp_source.html  (+33 more)
docs/search/: all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_8.js  classes_b.js  enums_1.js  enums_2.js  enums_4.js  files_2.js  files_8.js  files_b.js  functions_2.js  functions_9.js  functions_d.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+3 more)
include/scran/: center_size_factors.hpp  choose_pseudo_count.hpp  log_normalize_counts.hpp  normalize_counts.hpp  sanitize_size_factors.hpp
include/scran_norm/: normalize_counts.hpp  sanitize_size_factors.hpp  scran_norm.hpp
tests/: CMakeLists.txt
tests/src/: center_size_factors.cpp  choose_pseudo_count.cpp  log_normalize_counts.cpp  normalize_counts.cpp  sanitize_size_factors.cpp
